packages/k8s/server-deployment.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: liketurbo/docker-playground-server
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: 512Mi
            requests:
              memory: 256Mi
