packages/k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
    - port: 5432 # from outside
      targetPort: 5432 # to inside
