packages/k8s/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
    - port: 6379 # from outside
      targetPort: 6379 # to inside
